Fix #39: <pre> lines cut off in markdown

--- a/liteidex/deploy/welcome/style.css
+++ b/liteidex/deploy/welcome/style.css
@@ -5,9 +5,6 @@ body {
 pre, code {
 	font-family: Menlo, monospace;
 }
-pre {
-	line-height: 18px;
-}
 pre .comment {
 	color: #375EAB;
 }
